--- a/app/templates/final_heatmap_rom.html
+++ b/app/templates/final_heatmap_rom.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Women's Life Expectancy Heatmap</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
     <style>
         .info-box {
             background-color: #f0f0f0;
